# forScrappy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  docker-compose.yml  example.env  mypy.ini  requirements.txt  scheduler.sh  setup.cfg  setup.py
.github/workflows/: docker_ci.yml
ForScrappy/: .gitignore  Dockerfile  Pipfile  cli.py  docker-compose.yml  index.py  logger.py  settings.py
ForScrappy/.github/workflows/: docker_ci.yml
ForScrappy/ForScrappy/: asgi.py  dumper.py  parsers.py  utils.py  wsgi.py
ForScrappy/data/: admin.py  models.py
ForScrappy/models/: __init__.py  entities.py  models.py  types.py
ForScrappy/reporter/: manager.py  use_case.py  utils.py
ForScrappy/reporter/templates/: report.html
ForScrappy/repos/: api_repo.py  db_repo.py  handlers.py  parser_repo.py  request_repo.py
ForScrappy/tasks/: celery.py  tasks.py
ForScrappy/tests/: conftest.py  docker-compose-test.yml  test_celery.py  test_db_repo.py  test_parsers.py  test_request_repo.py  test_use_case.py
ForScrappy/tests/fixtures/responses/: file_name.html  forclubbers.html  forum_date_name.html  forum_thread.html  kraken.html
ForScrappy/use_case/: use_case.py
ForScrappy/utils/: consts.py  decorators.py  exceptions.py  login.py  schemas.py  utils.py
ForScrappy/utils/tests/: test_utils.py
nginx/: Dockerfile  default.conf  docker-compose.yml
