[bumpversion]
current_version = 1.2.0
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
serialize = 
	{major}.{minor}.{patch}-{release}{build}
	{major}.{minor}.{patch}

[flake8]
max-line-length = 169
extend-ignore = E203
max-complexity = 10

;[metadata]
;name = forScrappy
;version = 1.0.0

[bumpversion:file:setup.py]


[tool:pytest]
filterwarnings =
	ignore:.* is deprecated. Use select.:DeprecationWarning
	ignore:.* "__main__" has no models:RuntimeWarning
	ignore:.* detected an unclosed event loop when tearing down the event_loop:DeprecationWarning
	ignore:There is no current event loop:DeprecationWarning
;filterwarnings = ignore::.*kombu.utils.compat:82
;filterwarnings =
;    ignore::RuntimeWarning
;addopts = --capture=no
log_cli = true
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
